# TA_Adapta

./: .dockerignore  Dockerfile  README.md  app_1.Dockerfile  app_1.entrypoint.sh  app_2.Dockerfile  app_2.entrypoint.sh  dist.drone.yml  dist.env  entrypoint.sh  local.docker-compose.yml  magic.sh  prod.docker-compose.yml  pyproject.toml
adapta/: settings.py  urls.py  wsgi.py
resources/placeholder.vscode/: launch.json
resources/vscode/: extensions.json  launch.json  settings.json
src/: __init__.py  main.py  models.py  observers.py  router.py  schema.py
src/acme/: __init__.py  __main__.py  main.py
src/acme/config/: auth.py  databases.py
src/acme/databases/: __init__.py
src/api/: __init__.py
src/api/responses/: generic.py  messages.py
src/api/routers/: __init__.py  system.py
src/api/schema/: users.py
src/api/services/: __init__.py  messages.py  users.py
src/api/tasks/: __init__.py
src/app_1/: manage.py
src/app_1/adapta/: asgi.py  settings.py  urls.py
src/app_1/base/: serializers.py
src/app_2/adapta/: settings.py  urls.py
src/app_2/base/: apps.py  models.py  serializers.py  views.py
src/config/: __init__.py  api.py
src/config/migrations/: 2025_02_21_132339_create_users_table.py
src/config/seeds/: messages_table_seeder.py  users_table_seeder.py
src/databases/migrations/: 2025_02_21_132425_create_messages_table.py
src/databases/models/: __init__.py  users.py
src/databases/observers/: messages.py  users.py
src/databases/seeds/: messages_table_seeder.py  users_table_seeder.py
src/frontend/: index.html
src/integrations/: __init__.py
tests/: conftest.py  test_main.py
(+32 files in other folders)
