[tool.poetry]
name = "adapta"
version = "0.1.0"
description = "TA Adapta - Solution 3 - FastAPI (Minified)"
authors = ["Ada <github@adapdr.me>"]
readme = "README.md"
package-mode = false

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
masonite-orm = "^2.24.0"
jinja2 = "^3.1.5"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"
pytest = "^8.3.4"
