[tool.poetry]
name = "acme"
version = "0.1.0"
description = "TA Adapta - Solution 1 - Django"
authors = ["Ada <github@adapdr.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"
bandit = "^1.8.3"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
