[tool.poetry]
name = "acme"
version = "0.1.0"
description = "TA Adapta - Solution 1 - Django"
authors = ["Ada <github@adapdr.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.10"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
